--- a/app/views/settings/display.html.erb
+++ b/app/views/settings/display.html.erb
@@ -1,10 +1,15 @@
-<h1>Settings</h1>
-<form accept-charset="UTF-8" action="/settings/update_json" id="edit_user" method="post">
-  <div>...</div>
-  <label for="user_rails_settings_setting_object_phone">Phone</label>
-  <input id="user_rails_settings_setting_object_phone" name="user[rails_settings_setting_object][phone]" type="text" value="55564333" />
-  <label for="user_rails_settings_setting_object_website">Website</label>
-  <input id="user_rails_settings_setting_object_website" name="user[rails_settings_setting_object][website]" type="text" value="github.com" />
-  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-  <input name="commit" type="submit" value="Update Settings" />
-</form>
+<script>
+function getSettings() {
+  window.location.href = 'skp:get_settings@1'
+}
+function rcvSettings(input) {
+  input_data = {'data_h': 'sample'}
+  console.log("rcvSettings : "+JSON.stringify(input));
+  alert("rcvSettings : "+JSON.stringify(input));
+  data_s = JSON.stringify(input_data)
+  $.post('settings/display/', input_data, function(data){});
+}
+  getSettings();
+</script>
+
+<%= @sample %>
